# Share-Help

./: README.md  index.html  package-lock.json  package.json  vercel.json
backend/: .env.production  Procfile  db.sqlite3  nixpacks.toml  package-lock.json  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/shareHelp/: admin.py  apps.py  models.py  serializers.py  views.py  wsgi.py
backend/shareHelp/management/commands/: importar_ongs.py
backend/shareHelp/migrations/: 0001_initial.py  0002_alter_doacao_usuario.py  0002_codigoverificacao_remove_usuario_data_criacao_and_more.py  0002_instituicao_descricao_curta.py  0003_auto_20250922_1801.py  0004_merge_20250924_1438.py
backend/templates/emails/: codigo_verificacao.html
frontend/: nixpacks.toml  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: AnimatedText.vue  CausasCard.vue  DonationSuccessMessage.vue  FooterComponent.vue  HeaderComponent.vue  HowstartComponent.vue  InstsCssComponent.css  LoginForm.vue  LogoLoop.vue  MapInterativeComponent.vue  PaymentComponent.vue  PaymentMethodComponent.vue  RegisterStep.vue  graficComponent.vue  timeGlobal.js
frontend/src/config/: api.js
frontend/src/data/: faqData.js  (+4 more)
src/: App.vue  main.js
src/assets/: base.css  main.css
src/components/: CausasCard.vue  HeaderComponent.vue  LoginForm.vue  MapInteractive.vue  PaymentComponent.vue  RegisterStep.vue
src/data/: causasData.js
src/firebase/: config.js
src/router/: index.js
src/views/: HomePage.vue  Login.vue
(+14 files in other folders)
